--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
+# MongoDB server details
 MONGO_HOSTNAME=mongodb
 MONGO_PORT=27017
+
+# MongoDB root user
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=rootpassword
+
+# MongoDB replica set
 MONGO_REPLSET_NAME=dbrs
+
+# MongoDB main user
 MONGO_INITDB_USER=username
 MONGO_INITDB_PWD=password
+
+# MongoDB database
 MONGO_INITDB_DATABASE=admin
