--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    volumes:
+      - ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
@@ -26,13 +28,13 @@ services:
     ports:
       - 5601:5601
 
-  monstache_container_name:        
+  monstache:        
     image: rwynn/monstache:latest        
     container_name: container_name       
     working_dir: /monstache        
     command: -f ./config.toml        
     volumes:          
-        - ./monstache:/monstache/        
+      - ./monstache:/monstache/        
     ports:          
-        - "8080:8080"        
+      - "8080:8080"        
     restart: always       
