--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ MONGO_INITDB_DATABASE=admin
 
 # ELK stack version
 ELK_VERSION=7.6.2
+ELASTIC_DETAILS=http://elasticuser:elasticpass@elasticsearch:9200/
+ELASTIC_PASSWORD=elasticpass
+ES_JAVA_OPTS=-Xmx2048m -Xms2048m
+# Use single node discovery in order to disable production mode and avoid bootstrap checks
+# see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
+discovery.type=single-node
