--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ./mongo/initdb.d/:/docker-entrypoint-initdb.d/
       - mongodbdata:/data/db
     env_file: .env
     networks:
