--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
   mongodb:
     image: mongo
     container_name: mongodb
-    command: ["--replSet", "${MONGO_REPLSET_NAME}", "--port", "${MONGO_PORT}"]
+    command: ["--replSet", "${MONGO_REPLSET_NAME}", "--port", "${MONGO_PORT}", "--keyFile", "/data/key.file"]
     restart: always
     ports:
-      - 27017:27017
+      - 27017:${MONGO_PORT}
     volumes:
       - ./mongo/initdb.d/:/docker-entrypoint-initdb.d/
       - mongodbdata:/data/db
