--- a/.env
+++ b/.env
@@ -16,11 +16,18 @@ MONGO_INITDB_PWD=password
 # MongoDB database
 MONGO_INITDB_DATABASE=admin
 
-# ELK stack version
+# Elastic+Kibana stack
 ELK_VERSION=7.6.2
-ELASTIC_DETAILS=http://elasticuser:elasticpass@elasticsearch:9200/
+ELASTIC_USER=elasticuser
 ELASTIC_PASSWORD=elasticpass
 ES_JAVA_OPTS=-Xmx2048m -Xms2048m
 # Use single node discovery in order to disable production mode and avoid bootstrap checks
 # see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
 discovery.type=single-node
+ELASTICSEARCH_HOSTS=http://elasticsearch
+
+# Monstache options
+# Specify which databases or tables to track separated by comma
+MONSTACHE_CHANGE_STREAM_NS=
+MONSTACHE_ES_URLS=http://elasticsearch:9200
+MONSTACHE_RESUME=true
