--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,18 +65,16 @@ services:
 
   monstache:
     env_file: .env
+    environment:
+      - MONSTACHE_ES_USER=${ELASTIC_USER}
+      - MONSTACHE_ES_PASS=${ELASTIC_PASSWORD}
+      - MONSTACHE_MONGO_URL=mongodb://${MONGO_INITDB_USER}:${MONGO_INITDB_PWD}@mongodb:${MONGO_PORT}
     image: rwynn/monstache:latest
     container_name: monstache
     # command: -f /config.toml
-    command: tail -F anything
+    # command: tail -F anything
     volumes:          
       - monstachedata:/monstache/
-      - type: bind
-        source: ./monstache/config.toml
-        target: /config.toml
-        read_only: true
-    ports:
-      - "8080:8080"
     networks:
       - db
       - elk
